atualização de paragrafo para lista em extra

--- a/index.html
+++ b/index.html
@@ -163,38 +163,17 @@
 
         <div class="row">
           <h4 class="extra-titulo">Extra</h4>
-          <hr />
+          <hr/>
         </div>
-
-        <div class="row">
-          <p class="extra-texto">Internet sem fio</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Estacionamento seguro</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Tv a cabo</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Ventiladores nos quartos</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Cozinha completa</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Churrasqueiras</p>
-        </div>
-
-        <div class="row">
-          <p class="extra-texto">Piscina para uso comum das duas casas </p>
-					<hr/>
-        </div>
-
+				<ul class="extra-lista">
+					<li>Internet sem fio</li>
+					<li>Estacionamento seguro</li>
+					<li>Tv a cabo</li>
+					<li>Ventiladores nos quartos</li>
+					<li>Cozinha completa</li>
+					<li>Churrasqueiras</li>
+					<li>Piscina para uso comum das duas casas</li>
+				</ul>
 
       </div>
     </div>
@@ -203,6 +182,7 @@
       <div class="container">
         <div class="row regra">
 					<h2>Regras</h2>
+					<hr/>
           <ul>
             <li>Não é permitido fumar no interior do imóvel</li>
             <li>Deve ser Respeitado o horário de silêncio (das 22h ás 9h)</li>
