--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       <div class="container">
         <div class="row">
         <p>
-        Localizada as margens da Lagoa de Ibiraquera, onde você pode encontrar a
-        tranquilidade para descansar e aproveitar uma paisagem maravilhosa e curtir
-        as praias mais badaladas da região, com suas festas e vida noturna.
+        Localizado às margens da Lagoa de Ibiraquera, aqui você encontrará a
+        tranquilidade para descansar, podendo vislumbrar uma paisagem única e curtir
+        as praias mais badaladas da região, suas festas e vida noturna.
         </p>
         <p>
-        Belíssimas praias, a região oferece aos turistas trilhas
+        Com belíssimas praias, a região oferece aos turistas trilhas
         ecológicas, passeios de stand up paddle e caiaque, aulas de kitesurf, além
         de excelentes restaurantes e os melhores bares e casas noturnas da região.
         </p>
